Added Delete to Categories

--- a/categories.html
+++ b/categories.html
@@ -56,11 +56,7 @@
           <div class="row">
             <div class="col-1 col-sm-2 col-md-1 col-lg-1"></div>
             <div
-              class="
-                col-10 col-sm-8 col-md-10 col-lg-10
-                d-flex
-                justify-content-center
-              "
+              class="col-10 col-sm-8 col-md-10 col-lg-10 d-flex justify-content-center"
             >
               <form id="category" url="http://localhost:8080/categories">
                 <div class="form-group">
