--- a/categories.html
+++ b/categories.html
@@ -1,97 +1,175 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Categories</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-      crossorigin="anonymous"
-    />
-    <script src="components/header.js" type="text/javascript" defer></script>
-    <script src="components/footer.js" type="text/javascript" defer></script>
-    <link rel="stylesheet" href="css/main.css" />
-    <link
-      rel="icon"
-      href="./images/Tee_Shirts_Logo.svg"
-      sizes="16x16 32x32"
-      type="image/svg"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.js"
-      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-      crossorigin="anonymous"
-    ></script>
-    <script src="./js/category.js"></script>
-  </head>
-  <body>
-    <header-component></header-component>
 
-    <div class="content">
-      <div class="container-fluid">
-        <div class="col-12">
-          <div class="d-flex justify-content-center pageTitle">
-            <h1>Categories</h1>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Kategorien</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="icon" href="./images/Tee_Shirts_Logo.svg" sizes="16x16 32x32" type="image/svg" />
+
+  <script src="components/footer.js" type="text/javascript" defer></script>
+  <script src="components/header.js" type="text/javascript" defer></script>
+  <script src="./js/category.js"></script>
+</head>
+
+<body>
+  
+  <div class="content">
+    <div class="container-fluid">
+      <header-component></header-component>
+      <div class="col-12">
+        <div class="d-flex justify-content-center pageTitle">
+          <h1>Kategorien</h1>
         </div>
-        <div class="container">
-          <div class="row">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Category Name</th>
-                  <th scope="col">Actions</th>
-                </tr>
-              </thead>
-              <tbody class="output"></tbody>
-            </table>
-          </div>
-          <div class="row">
-            <div class="col-1 col-sm-2 col-md-1 col-lg-1"></div>
-            <div
-              class="col-10 col-sm-8 col-md-10 col-lg-10 d-flex justify-content-center"
-            >
-              <form id="category" url="http://localhost:8080/categories">
-                <div class="form-group">
-                  <div class="mb-3">
-                    <label for="category-name" class="form-label"
-                      >Category Name</label
-                    >
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="category-name"
-                      name="category-name"
-                      required
-                    />
-                  </div>
-                  <div class="row">
-                    <div class="col">
-                      <button type="submit" class="btn btn-primary">
-                        Create
-                      </button>
+      </div>
+      <div class="container">
+
+        <!-- Create Modal -->
+        <div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">
+                  Kategorie erstellen
+                </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+
+                <form id="category">
+                  <div class="form-group">
+                    <div class="mb-3">
+                      <label for="category-name" class="form-label">Kategorienname</label>
+                      <input type="text" class="form-control category-name-form" id="category-name"
+                        name="category-name" required />
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <button type="submit" class="btn btn-primary">
+                          Erstellen
+                        </button>
+                      </div>
+                      <div id="message" class="message-placeholder"></div>
                     </div>
                   </div>
-                </div>
-              </form>
+                </form>
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                  Schließen
+                </button>
+              </div>
             </div>
-            <div class="col-1 col-sm-2 col-md-1 col-lg-1"></div>
           </div>
+        </div>
+
+        <!-- Edit Modal -->
+        <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">
+                  Kategorie bearbeiten
+                </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+
+                <form id="category-edit">
+                  <div class="form-group">
+                    <div class="mb-3">
+                      <label for="category-id-edit" class="form-label">Kategorie-Id</label>
+                      <input type="text" class="form-control category-name-form" id="category-id-edit" name="category-id-edit"
+                        required />
+                    </div>
+                    <div class="mb-3">
+                      <label for="category-name-edit" class="form-label">Kategorienname</label>
+                      <input type="text" class="form-control category-name-form" id="category-name-edit"
+                        name="category-name-edit" required />
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">
+                          Bearbeiten
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                  Schließen
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Cannot Detele Modal -->
+        <div class="modal fade" id="cannotDeleteModal" tabindex="-1" aria-labelledby="cannotDeleteModalLabel"
+          aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="cannotDeleteModalLabel">
+                  Kategorie Kann nicht gelöscht werden
+                </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                Diese Kategorie wird von einem oder mehreren Produkten verwendet
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                  Schließen
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Kategorie-Name</th>
+                <th scope="col">Aktionen</th>
+              </tr>
+            </thead>
+            <tbody class="output"></tbody>
+          </table>
+        </div>
+        <div class="row">
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal">
+            Kategorie erstellen
+          </button>
         </div>
       </div>
     </div>
-    <div><footer-component></footer-component></div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  </div>
+  <div>
+    <footer-component></footer-component>
+  </div>
+
+  
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</body>
+
 </html>
