--- a/hilfe.html
+++ b/hilfe.html
@@ -1,89 +1,205 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" href="./images/Tee_Shirts_Logo.svg" sizes="16x16 32x32" type="image/svg">
-
-
-</head>
-<body>
-<header-component></header-component>
-<div class="content">
-    <div>
+    <link rel="stylesheet" href="css/main.css" />
+    <link
+      rel="icon"
+      href="./images/Tee_Shirts_Logo.svg"
+      sizes="16x16 32x32"
+      type="image/svg"
+    />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid">
-            <div class="col-12">
-                <div class="d-flex justify-content-center pageTitle">
-                    <h1>Hilfe und haufig gestellte Fragen</h1>
-                </div>
+          <a class="navbar-brand" href="index.html">
+            <img
+              src="./images/Tee_Shirts_Logo.svg"
+              alt=""
+              width="250"
+              height="60"
+              class="d-inline-block align-text-top"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse"
+            aria-controls="navbarCollapse"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Startseite</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="products.html">Produkte</a>
+              </li>
+              <li id="admin" class="nav-item">
+                <a class="nav-link" href="admin-dashboard.html">Shop Admin</a>
+              </li>
+            </ul>
+            <div class="d-flex bd-highlight mb-2">
+              <div id="login" class="p-2 bd-highlight">
+                <a class="btn btn-primary" href="login.html" role="button"
+                  >Einloggen</a
+                >
+              </div>
+              <div id="logout" name="logout" class="logout p-2 bd-highlight">
+                <a class="btn btn-primary" role="button">Abmelden</a>
+              </div>
+              <div id="register" class="p-2 bd-highlight">
+                <a
+                  class="btn btn-secondary"
+                  href="kunden-registrierung.html"
+                  role="button"
+                  >Regestrierung</a
+                >
+              </div>
             </div>
+          </div>
         </div>
-    </div>
-    <div class="container">
+      </nav>
+    </header>
+    <div class="content">
+      <div>
+        <div class="container-fluid">
+          <div class="col-12">
+            <div class="d-flex justify-content-center pageTitle">
+              <h1>Hilfe und haufig gestellte Fragen</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
         <div class="row">
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOne" aria-expanded="false"
-                                aria-controls="flush-collapseOne">
-                            welchem Warenwert erfolgt die Lieferung frei Haus?
-                        </button>
-                    </h2>
-                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-                         data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Wir haben keine Frei-Haus-Grenze beim Warenwert, da wir überzeugt sind, über den Weg der Versandkostenbeteiligung ein attraktiveres Angebot für alle Kundengruppen zu schnüren.
-                        </div>
-                    </div>
+          <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingOne">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseOne"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseOne"
+                >
+                  welchem Warenwert erfolgt die Lieferung frei Haus?
+                </button>
+              </h2>
+              <div
+                id="flush-collapseOne"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingOne"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Wir haben keine Frei-Haus-Grenze beim Warenwert, da wir
+                  überzeugt sind, über den Weg der Versandkostenbeteiligung ein
+                  attraktiveres Angebot für alle Kundengruppen zu schnüren.
                 </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                                aria-controls="flush-collapseTwo">
-                            Ich kann meine Bestellung nicht abschließen, denn ich erreiche den Mindestbestellwert nicht. Was soll ich tun?
-                        </button>
-                    </h2>
-                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
-                         data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Wir bitten um Verständnis, dass wir einen Mindestbestellwert von € 25,00 netto vorgeben müssen, um wirtschaflich arbeiten zu können. Wir sind überzeugt, dass Sie in unserem umfangreichen Sortiment weitere Artikel finden werden, um Ihre Bestellung zu ergänzen.
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                aria-controls="flush-collapseThree">
-                            Wann erhalte ich die bestellte Ware?
-                        </button>
-                    </h2>
-                    <div id="flush-collapseThree" class="accordion-collapse collapse"
-                         aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Ca. 95% unserer Aufträge wickeln wir innerhalb einer Woche ab. Sollte in Einzelfällen die Beschaffung der Ware länger dauern, kontaktieren wir Sie und schlagen Ihnen ggfs. Alternativen vor.
-                        </div>
-                    </div>
-                </div>
+              </div>
             </div>
-            <div class="col-1 col-sm-2 col-md-1 col-lg-1"></div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingTwo">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseTwo"
+                >
+                  Ich kann meine Bestellung nicht abschließen, denn ich erreiche
+                  den Mindestbestellwert nicht. Was soll ich tun?
+                </button>
+              </h2>
+              <div
+                id="flush-collapseTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingTwo"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Wir bitten um Verständnis, dass wir einen Mindestbestellwert
+                  von € 25,00 netto vorgeben müssen, um wirtschaflich arbeiten
+                  zu können. Wir sind überzeugt, dass Sie in unserem
+                  umfangreichen Sortiment weitere Artikel finden werden, um Ihre
+                  Bestellung zu ergänzen.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingThree">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseThree"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseThree"
+                >
+                  Wann erhalte ich die bestellte Ware?
+                </button>
+              </h2>
+              <div
+                id="flush-collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingThree"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Ca. 95% unserer Aufträge wickeln wir innerhalb einer Woche ab.
+                  Sollte in Einzelfällen die Beschaffung der Ware länger dauern,
+                  kontaktieren wir Sie und schlagen Ihnen ggfs. Alternativen
+                  vor.
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-1 col-sm-2 col-md-1 col-lg-1"></div>
         </div>
+      </div>
     </div>
-</div>
 
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-            crossorigin="anonymous"></script>
-<div><footer-component></footer-component></div>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
+    <footer class="footer">
+      <div class="row">
+        <p>
+          <a href="Impressum.html" data-toggle="tooltip" title="Impressum"
+            >Impressum</a
+          >
+          <a href="hilfe.html" data-toggle="tooltip" title="Hilfe">Hilfe</a>
+        </p>
+      </div>
+    </footer>
+    <script src="./js/main.js"></script>
+  </body>
 </html>
