--- a/kunden-registrierung.html
+++ b/kunden-registrierung.html
@@ -1,65 +1,110 @@
 <!doctype html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kunden Registrierung</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="components/header.js" type="text/javascript" defer></script>
-    <script src="components/footer.js" type="text/javascript" defer></script>
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-<header-component></header-component>
-<div class="container-fluid">
-    <div class="col-12">
-        <div class="d-flex justify-content-center pageTitle">
-            <h1>Kunden Registrierung</h1>
-        </div>
-    </div>
-</div>
-<div class="container">
-    <div class="row">
-        <div class="col-10 col-sm-8 col-md-10 col-lg-10 d-flex justify-content-center">
-            <form id="register">
-                <div class="form-group">
-                <div class="mb-3">
-                    <label for="firstName" class="form-label">First Name</label>
-                    <input type="text" class="form-control" id="firstName" name="firstName" required>
-                </div>
-                <div class="mb-3">
-                    <label for="lastName" class="form-label">Last Name</label>
-                    <input type="text" class="form-control" id="lastName" name="lastName" required>
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="text" class="form-control" id="username" name="username" required>
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Kennwort</label>
-                    <input type="password" class="form-control" id="password" name="password" autocomplete="on">
-                </div>
-                <div class="row">
-                        <button type="submit" class="btn btn-primary">Register</button>
-                </div>
+
+    <header>
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+              <img src="./images/Tee_Shirts_Logo.svg" alt="" width="250" height="60" class="d-inline-block align-text-top">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+              aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+              <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Startseite</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="products.html">Produkte</a>
+                </li>
+                <li id="admin" class="nav-item">
+                  <a class="nav-link" href="admin-dashboard.html">Shop Admin</a>
+                </li>
+              </ul>
+              <div class="d-flex bd-highlight mb-2">
+                <div id="login" class="p-2 bd-highlight"><a class="btn btn-primary" href="login.html"
+                    role="button">Einloggen</a></div>
+                <div id="logout" name="logout" class="logout p-2 bd-highlight"><a class="btn btn-primary"
+                    role="button">Abmelden</a></div>
+                <div id="register" class="p-2 bd-highlight"><a class="btn btn-secondary" href="kunden-registrierung.html"
+                    role="button">Regestrierung</a></div>
+              </div>
             </div>
-            </form>
+          </div>
+        </nav>
+      </header>
+
+    <div class="container-fluid">
+        <div class="col-12">
+            <div class="d-flex justify-content-center pageTitle">
+                <h1>Kunden Registrierung</h1>
+            </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row d-flex justify-content-center">
+            <div class="col-10 col-sm-8 col-md-10 col-lg-10 d-flex justify-content-center">
+                <form id="register">
+                    <div class="form-group">
+                        <div class="mb-3">
+                            <label for="firstName" class="form-label">Vorname</label>
+                            <input type="text" class="form-control" id="firstName" name="firstName" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="lastName" class="form-label">Nachname</label>
+                            <input type="text" class="form-control" id="lastName" name="lastName" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="text" class="form-control" id="username" name="username" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Kennwort</label>
+                            <input type="password" class="form-control" id="password" name="password" autocomplete="on">
+                        </div>
+                        <div class="row">
+                            <button type="submit" class="btn btn-primary">Registrieren</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
 
-    
-</div>
 
-    <div>
-        <footer-component></footer-component>
     </div>
+
+        <footer class="footer">
+          <div class="row">
+            <p>
+            <a href="Impressum.html" data-toggle="tooltip" title="Impressum">Impressum</a>
+            <a href="hilfe.html" data-toggle="tooltip" title="Hilfe">Hilfe</a></p>
+          </div>
+        </footer>
+    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-            crossorigin="anonymous"></script>
-            <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-            <script src="./js/register.js"></script>
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="./js/register.js"></script>
+    <script src="./js/main.js"></script>
+
 </body>
+
 </html>
