--- a/login.html
+++ b/login.html
@@ -7,15 +7,46 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kunden Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="components/header.js" type="text/javascript" defer></script>
-    <script src="components/footer.js" type="text/javascript" defer></script>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="./images/Tee_Shirts_Logo.svg" sizes="16x16 32x32" type="image/svg">
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="./js/login.js"></script>
 </head>
 <body>
-<header-component></header-component>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+              <img src="./images/Tee_Shirts_Logo.svg" alt="" width="250" height="60" class="d-inline-block align-text-top">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+              aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+              <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Startseite</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="products.html">Produkte</a>
+                </li>
+                <li id="admin" class="nav-item">
+                  <a class="nav-link" href="admin-dashboard.html">Shop Admin</a>
+                </li>
+              </ul>
+              <div class="d-flex bd-highlight mb-2">
+                <div id="login" class="p-2 bd-highlight"><a class="btn btn-primary" href="login.html"
+                    role="button">Einloggen</a></div>
+                <div id="logout" name="logout" class="logout p-2 bd-highlight"><a class="btn btn-primary"
+                    role="button">Abmelden</a></div>
+                <div id="register" class="p-2 bd-highlight"><a class="btn btn-secondary" href="kunden-registrierung.html"
+                    role="button">Regestrierung</a></div>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </header>
 
 <div class="content">
     <div class="container-fluid">
@@ -29,7 +60,7 @@
     <div class="row">
         <div class="col-1 col-sm-2 col-md-1 col-lg-1"></div>
         <div class="col-10 col-sm-8 col-md-10 col-lg-10 d-flex justify-content-center">
-            <form id="login"">
+            <form id="login-form"">
                 <div class="mb-3">
                     <label for="username" class="form-label">Benuzername</label>
                     <input type="text" class="form-control" id="username" name="username" required>
@@ -46,7 +77,7 @@
                         <button type="reset" class="btn btn-primary">Reset</button>
                     </div>
                 </div>
-               <div><p><a href="./kennwortreset.html">Kennwortvergessen</a></p></div>
+                <div id="message" class="message-placeholder"></div>
             </form>
         </div>
         <div class="col-1 col-sm-2 col-md-1 col-lg-1"></div>
@@ -54,9 +85,19 @@
 </div>
     </div>
 </div>
-<div><footer-component></footer-component></div>
+
+    <footer class="footer">
+      <div class="row">
+        <p>
+        <a href="Impressum.html" data-toggle="tooltip" title="Impressum">Impressum</a>
+        <a href="hilfe.html" data-toggle="tooltip" title="Hilfe">Hilfe</a></p>
+      </div>
+    </footer>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
+        <script src="./js/main.js"></script>
 </body>
 </html>
