--- a/products.html
+++ b/products.html
@@ -1,243 +1,89 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Products</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-      crossorigin="anonymous"
-    />
-    <script src="components/header.js" type="text/javascript" defer></script>
-    <script src="components/footer.js" type="text/javascript" defer></script>
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/products-card.css" />
-    <link
-      rel="icon"
-      href="./images/Tee_Shirts_Logo.svg"
-      sizes="16x16 32x32"
-      type="image/svg"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.js"
-      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-      crossorigin="anonymous"
-    ></script>
-    <script src="./js/products.js"></script>
-    <script src="./js/products_card.js"></script>
-  </head>
-  <body>
-    <header-component></header-component>
-    <div class="content">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Produkte</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet" type="text/css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+  <script src="components/header.js" type="text/javascript" defer></script>
+  <script src="components/footer.js" type="text/javascript" defer></script>
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/product-card.css" />
+  <link rel="icon" href="./images/Tee_Shirts_Logo.svg" sizes="16x16 32x32" type="image/svg" />
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
+  <script src="./js/products.js"></script>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
       <div class="container-fluid">
-        <div class="col-12">
-          <div class="d-flex justify-content-center pageTitle">
-            <h1>Products</h1>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">Item Number</th>
-                  <th scope="col">Product Description</th>
-                  <th scope="col">Product Long Description</th>
-                  <th scope="col">Size</th>
-                  <th scope="col">Status</th>
-                  <th scope="col">Price</th>
-                  <th scope="col">Brand</th>
-                  <th scope="col">Category</th>
-
-                  <th scope="col">Actions</th>
-                </tr>
-              </thead>
-              <tbody class="output"></tbody>
-            </table>
-          </div>
-          <div class="row">
-            <div class="col-1 col-sm-2 col-md-1 col-lg-1"></div>
-            <div
-              class="col-10 col-sm-8 col-md-10 col-lg-10 d-flex justify-content-center"
-            >
-              <form id="category" url="http://localhost:8080/products">
-                <div class="form-group">
-                  <div class="mb-3">
-                    <label for="product-description" class="form-label"
-                      >Product Description</label
-                    >
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="product-description"
-                      name="product-description"
-                      required
-                    />
-                    <label for="product-long-description" class="form-label"
-                      >Product Long Description</label
-                    >
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="product-long-description"
-                      name="product-long-description"
-                      required
-                    />
-                    <label for="size" class="form-label">Size</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="size"
-                      name="size"
-                      required
-                    />
-                    <label for="status" class="form-label">Status</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="status"
-                      name="status"
-                      required
-                    />
-                    <label for="price" class="form-label">Price</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="price"
-                      name="price"
-                      required
-                    />
-                    <label for="brand" class="form-label">Brand</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="brand"
-                      name="brand"
-                      required
-                    />
-                    <label for="category" class="form-label">Category</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="category"
-                      name="category"
-                      required
-                    />
-                  </div>
-                  <div class="row">
-                    <div class="col">
-                      <button type="submit" class="btn btn-primary">
-                        Create
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div class="col-1 col-sm-2 col-md-1 col-lg-1"></div>
-          </div>
-          <div class="row">
-            <div style="display: flex">
-              <div id="product-card">
-                <div id="product-front">
-                  <div class="shadow"></div>
-                  <img
-                    src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/t-shirt.png"
-                    alt=""
-                  />
-                  <div class="image_overlay"></div>
-                  <div id="view_details">View details</div>
-                  <div class="stats">
-                    <div class="stats-container">
-                      <span class="product_price">$39</span>
-                      <span class="product_name">Adidas Originals</span>
-                      <p>Men's running shirt</p>
-                      <div class="product-options">
-                        <strong>SIZES</strong>
-                        <span>XS, S, M, L, XL, XXL</span>
-                        <strong>COLORS</strong>
-                        <div class="colors">
-                          <div class="c-blue"><span></span></div>
-                          <div class="c-red"><span></span></div>
-                          <div class="c-white"><span></span></div>
-                          <div class="c-green"><span></span></div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div id="product-card">
-                <div id="product-front">
-                  <div class="shadow"></div>
-                  <img
-                    src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/t-shirt.png"
-                    alt=""
-                  />
-                  <div class="image_overlay"></div>
-                  <div id="view_details">View details</div>
-                  <div class="stats">
-                    <div class="stats-container">
-                      <span class="product_price">$39</span>
-                      <span class="product_name">Adidas Originals</span>
-                      <p>Men's running shirt</p>
-                      <div class="product-options">
-                        <strong>SIZES</strong>
-                        <span>XS, S, M, L, XL, XXL</span>
-                        <strong>COLORS</strong>
-                        <div class="colors">
-                          <div class="c-blue"><span></span></div>
-                          <div class="c-red"><span></span></div>
-                          <div class="c-white"><span></span></div>
-                          <div class="c-green"><span></span></div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-1 col-sm-2 col-md-1 col-lg-1"></div>
-            <div
-              class="col-10 col-sm-8 col-md-10 col-lg-10 d-flex justify-content-center"
-            >
-              <div class="output">
-                <h1 class="category"></h1>
-                <h2 class="item-number"></h2>
-                <h2 class="product-description"></h2>
-                <h2 class="product-long-description"></h2>
-                <h2 class="size"></h2>
-                <h2 class="price"></h2>
-              </div>
-            </div>
-            <div class="col-1 col-sm-2 col-md-1 col-lg-1"></div>
+        <a class="navbar-brand" href="index.html">
+          <img src="./images/Tee_Shirts_Logo.svg" alt="" width="250" height="60" class="d-inline-block align-text-top">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+          aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Startseite</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="products.html">Produkte</a>
+            </li>
+            <li id="admin" class="nav-item">
+              <a class="nav-link" href="admin-dashboard.html">Shop Admin</a>
+            </li>
+          </ul>
+          <div class="d-flex bd-highlight mb-2">
+            <div id="login" class="p-2 bd-highlight"><a class="btn btn-primary" href="login.html"
+                role="button">Einloggen</a></div>
+            <div id="logout" name="logout" class="logout p-2 bd-highlight"><a class="btn btn-primary"
+                role="button">Abmelden</a></div>
+            <div id="register" class="p-2 bd-highlight"><a class="btn btn-secondary" href="kunden-registrierung.html"
+                role="button">Regestrierung</a></div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="col-12">
-      <div class="d-flex justify-content-center pageTitle">
-        <h1>Products</h1>
+    </nav>
+  </header>
+  <div class="content">
+    <div class="container-fluid products-container">
+      <div class="col-12">
+        <div class="d-flex justify-content-center pageTitle">
+          <h1>Produkte</h1>
+        </div>
+      </div>
+      <!--Container for all products-->
+      <div class="products-cards-container col-12">
+        <div class="row" id="output">
+        </div>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  </div>
+  <footer class="footer">
+    <div class="row">
+      <p>
+        <a href="Impressum.html" data-toggle="tooltip" title="Impressum">Impressum</a>
+        <a href="hilfe.html" data-toggle="tooltip" title="Hilfe">Hilfe</a>
+      </p>
+    </div>
+  </footer>
+
+  <script src="./js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</body>
+
 </html>
