Fixed Registration problem

--- a/login.html
+++ b/login.html
@@ -34,6 +34,9 @@
                 <li id="admin" class="nav-item">
                   <a class="nav-link" href="admin-dashboard.html">Shop Admin</a>
                 </li>
+                <li id="customer" class="nav-item">
+                  <a class="nav-link" href="customer-dashboard.html">Mein Profil</a>
+                </li>
               </ul>
               <div class="d-flex bd-highlight mb-2">
                 <div id="login" class="p-2 bd-highlight"><a class="btn btn-primary" href="login.html"
