--- a/404.html
+++ b/404.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
+    <title>HOPPLA 404</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/404.css">
 </head>
 <body>
     <h1>404</h1>
     <h1>HOPPLA ! SEITE</h1>
     <h1>NICHT</h1>
     <h1>GEFUNDEN</h1>
+    <button onclick="location.href='/index.html'" type="button" class="btn btn-outline-light btn-lg mt-5">Tee Shirt wieter kaufen :)</button>
+
 </body>
 </html>
