--- a/Impressum.html
+++ b/Impressum.html
@@ -9,8 +9,11 @@
     <title>Impressum</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="components/header.js" type="text/javascript" defer></script>
-    <script src="components/footer.js" type="text/javascript" defer></script>
+        <script
+        src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+        crossorigin="anonymous"
+      ></script>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="./images/Tee_Shirts_Logo.svg" sizes="16x16 32x32" type="image/svg">
 
@@ -38,6 +41,9 @@
                 <li id="admin" class="nav-item">
                   <a class="nav-link" href="admin-dashboard.html">Shop Admin</a>
                 </li>
+                <li id="customer" class="nav-item">
+                    <a class="nav-link" href="customer-dashboard.html">Mein Profil</a>
+                  </li>
               </ul>
               <div class="d-flex bd-highlight mb-2">
                 <div id="login" class="p-2 bd-highlight"><a class="btn btn-primary" href="login.html"
@@ -167,6 +173,7 @@
                 https://www.kanzlei-hasselbach.de Kanzlei Hasselbach, Rechtsanwälte für Arbeitsrecht und Familienrecht
                 <br>
                 <br>
+                Produkte Fotos von: https://berglust.shop/
                 <br>
 
 
@@ -185,10 +192,13 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/main.js"></script>
+    <script src="./js/logout.js"></script>
 </body>
 
 </html>
