--- a/forbidden.html
+++ b/forbidden.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Forbidden</title>
+    <title>404 STOP!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/404.css">
 </head>
 <body>
-    <h1>404 Forbidden</h1>
+    <h1 class="title">404 Forbidden</h1>
     <h1>HOPPLA!</h1>
-    <h1>Versprich mir, dass du es nicht wieder tun wirst!</h1>
+    <h1>Versprich mir, dass du es nicht wieder tun wirst :)</h1>
+
+    <button onclick="location.href='/index.html'" type="button" class="btn btn-outline-light btn-lg mt-5">Ich verspreche, dass ich es nie wieder tun werde :)</button>
 </body>
 </html>
