--- a/kunden-registrierung.html
+++ b/kunden-registrierung.html
@@ -9,11 +9,12 @@
     <title>Kunden Registrierung</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-light">
           <div class="container-fluid">
@@ -34,6 +35,9 @@
                 </li>
                 <li id="admin" class="nav-item">
                   <a class="nav-link" href="admin-dashboard.html">Shop Admin</a>
+                </li>
+                <li id="customer" class="nav-item">
+                  <a class="nav-link" href="customer-dashboard.html">Mein Profil</a>
                 </li>
               </ul>
               <div class="d-flex bd-highlight mb-2">
@@ -59,7 +63,7 @@
     <div class="container">
         <div class="row d-flex justify-content-center">
             <div class="col-10 col-sm-8 col-md-10 col-lg-10 d-flex justify-content-center">
-                <form id="register">
+                <form id="registration-form">
                     <div class="form-group">
                         <div class="mb-3">
                             <label for="firstName" class="form-label">Vorname</label>
@@ -70,7 +74,7 @@
                             <input type="text" class="form-control" id="lastName" name="lastName" required>
                         </div>
                         <div class="mb-3">
-                            <label for="email" class="form-label">Email</label>
+                            <label for="username" class="form-label">Email</label>
                             <input type="text" class="form-control" id="username" name="username" required>
                         </div>
                         <div class="mb-3">
@@ -84,10 +88,7 @@
                 </form>
             </div>
         </div>
-
-
     </div>
-
         <footer class="footer">
           <div class="row">
             <p>
@@ -96,13 +97,47 @@
           </div>
         </footer>
     
+<!-- User is alerady exists -->
+<div
+class="modal fade"
+id="user-already-exist"
+tabindex="-1"
+aria-labelledby="userIsExistLabel"
+aria-hidden="true"
+>
+<div class="modal-dialog modal-dialog-centered">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="userIsExistModalLabel">
+        Es hat leider nicht geklappt :(
+      </h5>
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="modal"
+        aria-label="Close"
+      ></button>
+    </div>
+    <div class="modal-body">
+      Diese Email gibt es bereits, bitte verwenden Sie andere Email!
+    </div>
+    <div class="modal-footer">
+      <button
+        type="button"
+        class="btn btn-secondary"
+        data-bs-dismiss="modal"
+      >
+        Schließen
+      </button>
+    </div>
+  </div>
+</div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="./js/register.js"></script>
+        <script src="./js/register.js"></script>
     <script src="./js/main.js"></script>
 
 </body>
