--- a/products.html
+++ b/products.html
@@ -10,8 +10,6 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet" type="text/css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
-  <script src="components/header.js" type="text/javascript" defer></script>
-  <script src="components/footer.js" type="text/javascript" defer></script>
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/product-card.css" />
   <link rel="icon" href="./images/Tee_Shirts_Logo.svg" sizes="16x16 32x32" type="image/svg" />
@@ -41,6 +39,9 @@
             </li>
             <li id="admin" class="nav-item">
               <a class="nav-link" href="admin-dashboard.html">Shop Admin</a>
+            </li>
+            <li id="customer" class="nav-item">
+              <a class="nav-link" href="customer-dashboard.html">Mein Profil</a>
             </li>
           </ul>
           <div class="d-flex bd-highlight mb-2">
