user entity edit password

--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
               </li>
             </ul>
             <div class="d-flex bd-highlight mb-2">
+              <div id="cart-button" class="p-2 bd-highlight">
+                <a
+                  class="btn btn-danger"
+                  href="cart.html"
+                  role="button"
+                  >Cart</a
+                >
+              </div>
               <div id="login" class="p-2 bd-highlight">
                 <a class="btn btn-primary" href="login.html" role="button"
                   >Einloggen</a
@@ -162,7 +170,7 @@
           <h1 class="featuers-title">WINTER</h1>
         </div>
         <div class="col-sm-3 featuerdcol featuerdcol3">
-          <h1 class="featuers-title">ALLE JAHRZEITEN</h1>
+          <h1 class="featuers-title">ALLE JAHRESZEITEN</h1>
         </div>
       </div>
     </div>
