--- a/kunden-registrierung.html
+++ b/kunden-registrierung.html
@@ -41,6 +41,14 @@
                 </li>
               </ul>
               <div class="d-flex bd-highlight mb-2">
+                <div id="cart-button" class="p-2 bd-highlight">
+                  <a
+                    class="btn btn-danger"
+                    href="cart.html"
+                    role="button"
+                    >Cart</a
+                  >
+                </div>
                 <div id="login" class="p-2 bd-highlight"><a class="btn btn-primary" href="login.html"
                     role="button">Einloggen</a></div>
                 <div id="logout" name="logout" class="logout p-2 bd-highlight"><a class="btn btn-primary"
