--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a class="navbar-brand" href="index.html">
             <img
               src="./images/Tee_Shirts_Logo.svg"
-              alt=""
+              alt="Tee Shirt Firmenlogo"
               width="250"
               height="60"
               class="d-inline-block align-text-top"
@@ -74,13 +74,7 @@
               </li>
             </ul>
             <div class="d-flex bd-highlight mb-2">
-              <div id="cart-button" class="p-2 bd-highlight">
-                <a
-                  class="btn btn-danger"
-                  href="cart.html"
-                  role="button"
-                  >Cart</a
-                >
+              <div id="cart-button" class="p-2 bd-highlight cart-button">
               </div>
               <div id="login" class="p-2 bd-highlight">
                 <a class="btn btn-primary" href="login.html" role="button"
@@ -133,13 +127,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/shop-slider1.jpg" class="d-block w-100" alt="..." />
+          <img src="images/shop-slider1.jpg" class="d-block w-100" alt="Dekoration Foto" />
         </div>
         <div class="carousel-item">
-          <img src="images/shop-slider2.jpg" class="d-block w-100" alt="..." />
+          <img src="images/shop-slider2.jpg" class="d-block w-100" alt="Dekoration Foto" />
         </div>
         <div class="carousel-item">
-          <img src="images/shop-slider3.jpg" class="d-block w-100" alt="..." />
+          <img src="images/shop-slider3.jpg" class="d-block w-100" alt="Dekoration Foto" />
         </div>
       </div>
       <button
@@ -161,7 +155,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="featuers">
+    <!--<div class="featuers">
       <div class="d-flex justify-content-center featuerd">
         <div class="col-sm-3 featuerdcol featuerdcol1">
           <h1 class="featuers-title">SOMMER</h1>
@@ -173,8 +167,7 @@
           <h1 class="featuers-title">ALLE JAHRESZEITEN</h1>
         </div>
       </div>
-    </div>
-
+    </div>-->
     <div class="content">
       <div class="container-fluid products-container">
         <!--Container for all products-->
@@ -204,5 +197,6 @@
     ></script>
     <script src="./js/main.js"></script>
     <script src="./js/products.js"></script>
+    <script src="./js/cart_button.js"></script>
   </body>
 </html>
