--- a/Impressum.html
+++ b/Impressum.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-md navbar-light bg-light">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-              <img src="./images/Tee_Shirts_Logo.svg" alt="" width="250" height="60" class="d-inline-block align-text-top">
+              <img src="./images/Tee_Shirts_Logo.svg" alt="Tee Shirt Firmenlogo" width="250" height="60" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
               aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
