--- a/cart.html
+++ b/cart.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport"
@@ -10,13 +11,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/main.css" />
-  <link rel="stylesheet" href="css/product-details.css">
-  <link rel="icon" href="./images/Tee_Shirts_Logo.svg" sizes="16x16 32x32" type="image/svg"/>
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/product-card.css" />
+  <link rel="stylesheet" href="css/cart.css" />
+  <link rel="icon" href="./images/Tee_Shirts_Logo.svg" sizes="16x16 32x32" type="image/svg" />
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
-    <script src="./js/product-details.js"></script>
+  <script src="./js/cart.js"></script>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">Startseite</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="products.html">Product</a>
+              <a class="nav-link" href="products.html">Produkte</a>
             </li>
             <li id="admin" class="nav-item">
               <a class="nav-link" href="admin-dashboard.html">Shop Admin</a>
@@ -45,8 +45,15 @@
               <a class="nav-link" href="customer-dashboard.html">Mein Profil</a>
             </li>
           </ul>
+          
           <div class="d-flex bd-highlight mb-2">
-            <div id="cart-button" class="p-2 bd-highlight cart-button">
+            <div id="cart-button" class="p-2 bd-highlight">
+              <a
+                class="btn btn-danger"
+                href="cart.html"
+                role="button"
+                >Cart</a
+              >
             </div>
             <div id="login" class="p-2 bd-highlight"><a class="btn btn-primary" href="login.html"
                 role="button">Einloggen</a></div>
@@ -63,11 +70,31 @@
     <div class="container-fluid products-container">
       <div class="col-12">
         <div class="d-flex justify-content-center pageTitle">
+          <h1>Cart</h1>
         </div>
       </div>
-      <!--Container Product Details-->
-      <div class="product-details col-12">
+      <!--Container for Cart-->
+      <div class="products-cards-container col-12">
         <div class="row" id="output">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Artiklenummer</th>
+                <th scope="col">Artiklename</th>
+                <th scope="col">Preis</th>
+                <th scope="col">Menge</th>
+              </tr>
+            </thead>
+            <tbody class="cart-items-table">
+              
+            </tbody>
+            <tfoot>
+              <td></td>
+              <td></td>
+              <th>Gesammt</th>
+              <th class="cart-total">€ 0,00</th>
+            </tfoot>
+          </table>
         </div>
       </div>
     </div>
