--- a/hilfe.html
+++ b/hilfe.html
@@ -34,7 +34,7 @@
           <a class="navbar-brand" href="index.html">
             <img
               src="./images/Tee_Shirts_Logo.svg"
-              alt=""
+              alt="Tee Shirt Firmenlogo"
               width="250"
               height="60"
               class="d-inline-block align-text-top"
