Product images will be delivered from backend 8080

--- a/cart.html
+++ b/cart.html
@@ -91,7 +91,7 @@
             <tfoot>
               <td></td>
               <td></td>
-              <th>Gesammt</th>
+              <th>Gesamt</th>
               <th class="cart-total">€ 0,00</th>
             </tfoot>
           </table>
